WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49264
Context menus show up in the wrong place when the page is scrolled
https://bugs.webkit.org/show_bug.cgi?id=49264
Summary
Context menus show up in the wrong place when the page is scrolled
Sam Weinig
Reported
2010-11-09 11:13:38 PST
Context menus show up in the wrong place when the page is scrolled
Attachments
Patch
(2.76 KB, patch)
2010-11-09 11:15 PST
,
Sam Weinig
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2010-11-09 11:15:55 PST
Created
attachment 73392
[details]
Patch
Sam Weinig
Comment 2
2010-11-09 11:20:23 PST
Landed in
r71656
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug