Context menus show up in the wrong place when the page is scrolled https://bugs.webkit.org/show_bug.cgi?id=49264

Reviewed by Anders Carlsson.

Convert the hitTestResult point into 'window' coordinates before sending over
to the UIProcess to show the menu.

* WebProcess/WebPage/WebContextMenu.cpp:
(WebKit::WebContextMenu::show):
Convert to use message sender interface.

(WebKit::WebContextMenu::itemSelected):
Remove unnecessary WebCore::'s.



Canonical link: https://commits.webkit.org/62143@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71656 268f45cc-cd09-0410-ab3c-d52691b4dbfc